################################################################################
#  Licensed to the Apache Software Foundation (ASF) under one
#  or more contributor license agreements.  See the NOTICE file
#  distributed with this work for additional information
#  regarding copyright ownership.  The ASF licenses this file
#  to you under the Apache License, Version 2.0 (the
#  "License"); you may not use this file except in compliance
#  with the License.  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
# limitations under the License.
################################################################################
[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "packaging>=20.5; platform_machine=='arm64'",  # macos M1
    "setuptools>=18.0",
    "wheel",
    "apache-beam>=2.43.0,<2.49.0",
    "cython>=0.29.24,<3",
    "fastavro>=1.1.0,!=1.8.0"
]

[tool.cibuildwheel]
build = ["cp38-*", "cp39-*", "cp310-*"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
