################################################################################
#  Licensed to the Apache Software Foundation (ASF) under one
#  or more contributor license agreements.  See the NOTICE file
#  distributed with this work for additional information
#  regarding copyright ownership.  The ASF licenses this file
#  to you under the Apache License, Version 2.0 (the
#  "License"); you may not use this file except in compliance
#  with the License.  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
# limitations under the License.
################################################################################

[project]
name = "pyflink-docs"
version = "0.1.0"
description = "Sphinx documentation build for PyFlink"
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "Sphinx==4.5.0",
    "importlib-metadata==4.4.0",
    "Docutils==0.17.1",
    "pydata_sphinx_theme==0.11.0",
    "sphinx_mdinclude==0.5.3",
    "Jinja2<3.1.0",
    "sphinxcontrib-applehelp<1.0.8",
    "sphinxcontrib.devhelp<1.0.6",
    "sphinxcontrib.htmlhelp<2.0.5",
    "sphinxcontrib-serializinghtml<1.1.10",
    "sphinxcontrib-qthelp<1.0.7",
    "sphinx-intl",
]
